trying to fix word wrap

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -259,7 +259,7 @@ footer {
   }
 
   pre, code {
-    word-wrap:normal;
+    word-wrap:break-word;
   }
 }
 
